update function buttons and styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&family=Poppins:ital@0;1&family=Source+Serif+Pro:ital,wght@1,600&family=Work+Sans:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -44,15 +47,15 @@
         <div class="row">
             <button id="funct" class="percent">%</button>
             <button id="funct" class="sq-root"><i class="fas fa-square-root-alt"></i></button>
-            <button id="funct">x^2</button>
-            <button id="funct">1/x</button>
+            <button id="funct" class="italic">x<sup>2</sup></button>
+            <button id="funct" class="italic">1/x</button>
         </div>
 
         <div class="row">
             <button id="funct">INV</button>
             <button id="funct">(</button>
             <button id="funct">)</button>
-            <button id="funct">Yx</button>
+            <button id="funct" class="italic">y<sup>x</sup></button>
             <button class="oper" id="amt">/</button>
         </div>
 
